# textflows

./: pyproject.toml
tests/: __init__.py  test_parser.py
textflows/: __main__.py
textflows/core/: __init__.py  registry.py
textflows/parser/: __init__.py  exceptions.py  parser.py  registry.py
textflows/parser/definitions/: __init__.py  basic.py  condition_args.py  loops.py  subflow_result_parts.py  tasks.py
